documentation in swagger and removed joi password
